make sure there is a gap next to search icon

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -260,6 +260,9 @@ a.visitor-log-visitor-profile-link {
       margin-right: 4px;
       margin-left: 4px;
     }
+    &.search {
+      margin-right: 4px;
+    }
 }
 
 .action-list-url {
